<resources>
    <string name="app_name">Traxivity_BETA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="test">Traxivity</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="welcome">Hello !</string>
    <string name="before">Back</string>
    <string name="after">Forward</string>
    <string name="changeName">Change name</string>
    <string name="activity">Total: </string>
    <string name="running">Running: </string>
    <string name="stairs">Stairs: </string>
    <string name="walking">Walking: </string>
    <string name="steps">Steps: </string>
    <string name="nbActivity">0 min</string>
    <string name="day">Day</string>
    <string name="settings">settings</string>
    <string name="arrowBack">arrow back</string>
    <string name="arrowForward">arrow forward</string>
    <string name="sign_out">Sign Out</string>
    <string name="input_goal">New Goal</string>
    <string name="graph_view">Graph View</string>
    <string name="goal_tracker">Goal Tracker</string>

    <string name="validate">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
</resources>
